--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
         <div class="container grid">
           <!-- Start Card 1 -->
           <div class="card transition">
-            <img src="./Images/Project-1.jpg" alt="Project 1">
+            <img src="./Images/Project-1.png" alt="Project 1">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
           <!-- End Card 1 -->
           <!-- Start Card 2 -->
           <div class="card transition">
-            <img src="/Images/Project-2.jpg" alt="Project 2">
+            <img src="/Images/Project-2.png" alt="Project 2">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
           <!-- End Card 2 -->
           <!-- Start Card 3 -->
           <div class="card transition">
-            <img src="/Images/Project-3.jpg" alt="Project 3">
+            <img src="/Images/Project-3.png" alt="Project 3">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
@@ -194,7 +194,7 @@
           </div>
         <div class="container">
           <div class="image">
-            <img src="/Images/mountain-black-and-white3.jpg" alt="mountain black and white 3">
+            <img src="/Images/mountain-black-and-white3.png" alt="mountain black and white 3">
           </div>
           <div class="text">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non,
