--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
         <div class="container">
           <div class="image">
-            <img src="Images/mountain-black-and-white3.png" alt="mountain black and white 3">
+            <img src="../Images/mountain-black-and-white3.png" alt="mountain black and white 3">
           </div>
           <div class="text">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non,
