--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- website Icon -->
-    <link rel="icon" href="./Images/tap-logo.png" type="image/png">
+    <link rel="icon" href="Images/tap-logo.png" type="image/png">
   </head>
 
   <body>
@@ -167,14 +167,14 @@
           <!-- End Card 1 -->
           <!-- Start Card 2 -->
           <div class="card transition">
-            <img src="./Images/Project-2.png" alt="Project 2">
+            <img src="/Images/Project-2.png" alt="Project 2">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
           <!-- End Card 2 -->
           <!-- Start Card 3 -->
           <div class="card transition">
-            <img src="./Images/Project-3.png" alt="Project 3">
+            <img src="/Images/Project-3.png" alt="Project 3">
             <h3>Project Here</h3>
             <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
           </div>
@@ -194,7 +194,7 @@
           </div>
         <div class="container">
           <div class="image">
-            <img src="../Images/mountain-black-and-white3.png" alt="mountain black and white 3">
+            <img src="/Images/mountain-black-and-white3.png" alt="mountain black and white 3">
           </div>
           <div class="text">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non,
